--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,10 @@
     <%= javascript_include_tag Ckeditor.cdn_url %>
     <%= render 'layouts/shim' %>
     <%= favicon_link_tag 'favicon-32x32.png', size: '32x32' %>
+    <%= render 'layouts/social' %>
 
 </head>
+
 <body>
 <header>
 <%= render 'layouts/header' %>
