--- a/app/views/layouts/_social.html.erb
+++ b/app/views/layouts/_social.html.erb
@@ -1,3 +1,7 @@
+<% content_for :head do %>
+
+
+
 <!-- Schema.org markup for Google+ -->
 <meta itemprop="name" content="Ideas and Projects">
 <meta itemprop="description" content="Ideas connect us. Share. Explore">
@@ -14,7 +18,7 @@
 
 <!-- Open Graph data -->
 <meta property="og:title" content="Ideas and Projects" />
-<meta property="og:type" content="blog" />
+<meta property="og:type" content="website" />
 <meta property="og:url" content="https://www.caansonia.com/" />
 <meta property="og:image" content="https://caansonia.com/assets/header-56303a92002a20af5adde46f8db149028c756d4953cea1f0090183125b28e9ae.jpg" />
 <meta property="og:description" content="Ideas connect us. Share. Explore" />
@@ -24,5 +28,8 @@
 <meta property="article:section" content="Ideas Section" />
 <meta property="article:tag" content="Ideas Tag" />
 <meta property="fb:admins" content="977616752327350" />
+
+
+<% end %>
 
 
