--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -8,7 +8,7 @@
      
      <div class="col-md-11">
      
-         <p class="title-post"><%= link_to micropost.title, micropost_path(micropost, anchor: "head") %> </p>
+         <p class="title-post"><%= link_to micropost.title, micropost_path(micropost) %> </p>
       </div>
   </div>
   <div class="row">
