--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -1,5 +1,5 @@
 
-<% provide(:title, "Ideas") %>
+<% provide(:title, "Ideas and Projects") %>
 	<h0 id="ideas" name="ideas"></h0>	
 <div id="article">
 <div class="container">
