--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
       <meta name="twitter:image:src" content="https://caansonia.com/assets/header-56303a92002a20af5adde46f8db149028c756d4953cea1f0090183125b28e9ae.jpg">
 
       <!-- Open Graph data -->
-      <meta property="og:title" content="Ideas and Projects" />
+      <meta property="og:title" content="Ideas" />
       <meta property="og:type" content="website" />
       <meta property="og:url" content="https://www.caansonia.com/" />
       <meta property="og:image" content="https://caansonia.com/assets/header-56303a92002a20af5adde46f8db149028c756d4953cea1f0090183125b28e9ae.jpg" />
