--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -10,6 +10,7 @@
 </div>
 </div>
 <div class="row">
+
 <div class="ribbon-index">
 	    <div class="col-md-12">
 	    <% if admin? %>
@@ -32,6 +33,7 @@
 	    </div>
 </div>
 </div>
+
 <div class="row">
 	<span class="microposts">  
 	
@@ -50,10 +52,12 @@
 
 <div class="row">
 <div class="col-md-12">
+
+
      <div>
 	
 		<% cache ("flickr_sidebar_widget") do %>
-<%= render_flickr_sidebar_widget('138220357@N03') %>
+<%#= render_flickr_sidebar_widget('138220357@N03') %>
                                <% end %>
 	</div> 
 
@@ -66,7 +70,7 @@
  
  	<div>
 		<% cache ("flickr_sidebar_set") do %>
-<%= render_flickr_sidebar_set('138220357@N03') %>
+<%#= render_flickr_sidebar_set('138220357@N03') %>
                                <% end %>
 	</div> 
 </div>
