--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -48,6 +48,11 @@
 </div>
 </div>
 
+<div class="row">
+<div class="col-md-12">
+<p class="invisible">blah blah</p>
+</div>
+</div>
 
 
 <div class="row">
